refactor connections to allow swapping. use apache regex.